# aemo-mdff-reader

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  main.py  pyproject.toml  reader.py  requirements.txt  setup.py  test.csv  test.py
.clusterfuzzlite/: Dockerfile  build.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cflite_batch.yml  cflite_pr.yml  ci.yml  codeql.yml  release-please.yml  release.yml  scorecard.yml
aemo_mdff_reader/: __init__.py  aggregate.py  cli.py  parser.py  reader.py  types.py
aemo_mdff_reader/sql/: __init__.py  store.py
benchmarks/: bench_parser.py
examples/: 01_load_and_inspect.py  02_daily_totals.py  03_filter_to_dataframe.py  04_validate.py  README.md
fuzz/: fuzz_parse.py  fuzz_parse_accumulations.py  fuzz_parse_to_columns.py
nem12_reader/: __init__.py  aggregate.py  cli.py  parser.py  reader.py  spec.py  types.py
nem12_reader/nemstructure/: __init__.py  end.py  enem12.py  header.py  nem12.py  nem13.py  record.py
nem12_reader/sql/: __init__.py  query.py  store.py
nemstructure/: end.py  enem12.py  header.py  nem12.py  nem13.py  record.py
nemstructure/records/: header.py  record.py
nemstructure/records/nem12/: nmi_data.py
requirements/: audit.in  audit.txt  build.in  build.txt  dev.in  dev.txt  lint.in  lint.txt
sql/: query.py  store.py
src/records/: Record.py
tests/: test_cli.py  test_datetime_formats.py  test_edge_cases.py  test_ergonomics.py  test_events_b2b.py  test_large_files.py  test_nem13.py  test_parser.py  test_spec.py  test_sql.py  test_validation.py
tests/fixtures/: generate.py  sample_nem12.csv  sample_nem13.csv
